force-app/main/default/objects/Student__c/fields/Age_Category__c.field-meta.xml
<CustomField>
    <fullName>Age_Category__c</fullName>
    <label>Age Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kid</fullName>
            </value>
            <value>
                <fullName>Teenager</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>