force-app/main/default/objects/Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class X</fullName>
            </value>
            <value>
                <fullName>Class Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>