force-app/main/default/objects/Student__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bca</fullName>
            </value>
            <value>
                <fullName>cs</fullName>
            </value>
            <value>
                <fullName>bcom</fullName>
            </value>
            <value>
                <fullName>bba</fullName>
            </value>
            <value>
                <fullName>mba</fullName>
            </value>
            <value>
                <fullName>mca</fullName>
            </value>
            <value>
                <fullName>msc</fullName>
            </value>
            <value>
                <fullName>bsc</fullName>
            </value>
            <value>
                <fullName>ba</fullName>
            </value>
            <value>
                <fullName>ma</fullName>
            </value>
            <value>
                <fullName>msw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>