force-app/main/default/objects/Student__c/fields/FatherName__c.field-meta.xml
<CustomField>
    <fullName>FatherName__c</fullName>
    <label>FatherName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>