force-app/main/default/objects/Student__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>