force-app/main/default/objects/Student__c/fields/MotherName__c.field-meta.xml
<CustomField>
    <fullName>MotherName__c</fullName>
    <label>MotherName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>