force-app/main/default/objects/Student__c/fields/Overall_Result__c.field-meta.xml
<CustomField>
    <fullName>Overall_Result__c</fullName>
    <label>Overall Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>