force-app/main/default/objects/Student__c/fields/Shoe_Design__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Design__c</fullName>
    <label>Shoe Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>green</fullName>
            </value>
            <value>
                <fullName>yellow</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>