force-app/main/default/objects/Student__c/fields/Social_Science__c.field-meta.xml
<CustomField>
    <fullName>Social_Science__c</fullName>
    <label>Social Science</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>