force-app/main/default/objects/Student__c/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <label>Student Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular/Day scholar</fullName>
            </value>
            <value>
                <fullName>Hostler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>