force-app/main/default/objects/Student__c/fields/Total_Mark__c.field-meta.xml
<CustomField>
    <fullName>Total_Mark__c</fullName>
    <label>Total Mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>