force-app/main/default/objects/Student__c/recordTypes/PG_COURSES.recordType-meta.xml
<RecordType>
    <fullName>PG_COURSES</fullName>
    <active>false</active>
    <label>PG COURSES</label>
</RecordType>